--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <header>
       <h1>BryannaThinkful</h1>
 
-      <a> href='#'>LinkedIn Profile</a>
-      <a> href='#'>Github Profile</a>
+      <a href='#'>LinkedIn Profil</a>
+      <a href='#'>Github Profile</a>
       <a href='#'>Email</a>
-        </header>
+      
+    </header>
     
     <main>
-      <h2>Intro:</h2>
+      <h2>Intro</h2>
       <p>Hello! My name is Bryanna and I am 21 years old. I am based in Los Angeles California. </p>
       <div>
         <article>
