--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Bryanna Thinkful</h1>
       <a href='#linked-in-profile'>LinkedIn Profile</a>
       <a href='#github-profile'>Github Profile</a>
-      <a href='#Email'>Email</a>
+      <a href='#email'>Email</a>
     </header>
     
     <main>
@@ -23,9 +23,9 @@
       <div>
         <article>
           <h3>About me:</h3>
-          <p>I started coding in January 2023 and loved it ever since. I love being challenged and the feeling o solving a problem that I have been stuck on for awhile. I enjoy the design aspect of web development and the joy of personalizing web pages the way I see fit. </p>
-          <p>I have always worked in a team and having other individuals to bounce ideas of is an amazing aspect of web development</p>
-          <p>Collaboration in the web development space is a wonderful aspect that is engraved into the culture of tech. Having a support system is a must for me in any endeavo I begin.</p>
+          <p>I started coding in January 2023 and loved it ever since. I love being challenged and the feeling of solving a problem that I have been stuck on for awhile. I enjoy the design aspect of web development and the joy of personalizing web pages the way I see fit. </p>
+          <p>I have always worked in a team and having other individuals to bounce ideas of is an amazing aspect of web development.</p>
+          <p>Collaboration in the web development space is a wonderful aspect that is engraved into the culture of tech. Having a support system is a must for me in any endeavor I begin.</p>
         </article>
       </div>
     </main>
