--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <article id='linked-in-profile'>
       <h4>LinkedIn Profile</h4>
 
-      <article id='github-profile>
+      <article id='github-profile'>
       <h4>Github Profile</h4> 
 
       <article id='email'>
