--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     
     <main>
-      <h2>Intro</h2>
-      <p>Hello! My name is Bryanna and I am 21 years old. I am based in Los Angeles California. </p>
       <div>
+        <h2>Intro</h2>
+        <p>Hello! My name is Bryanna and I am 21 years old. I am based in Los Angeles California. </p>
         <article>
           <h3>About me:</h3>
           <p>I started coding in January 2023 and loved it ever since. I love being challenged and the feeling of solving a problem that I have been stuck on for awhile. I enjoy the design aspect of web development and the joy of personalizing web pages the way I see fit. </p>
@@ -32,14 +32,17 @@
     
    
     <footer>
-      <article id='linked-in-profile'>
-      <h4>LinkedIn Profile</h4>
-
-      <article id='github-profile'>
-      <h4>Github Profile</h4> 
-
-      <article id='email'>
-      <h4>Email</h4>
+      <div>
+        <article id='linked-in-profile'>
+        <h4>LinkedIn Profile</h4>
+  
+        <article id='github-profile'>
+        <h4>Github Profile</h4> 
+  
+        <article id='email'>
+        <h4>Email</h4>
+        </article>
+      </div>
     </footer>
   </body>
 
