--- a/index.html
+++ b/index.html
@@ -19,20 +19,34 @@
     
     <main>
       <div>
-        <h2>Intro</h2>
+        <!-- This is my intro that is hosted in my main container -->
+        <!-- h2 tag -->
+        <h2>Intro</h2> 
+        <!-- should intro go in container?-->
         <p>Hello! My name is Bryanna and I am 21 years old. I am based in Los Angeles California. </p>
         <article>
+        <!--this is my article section where I have all of my more descriptive and longer info -->
           <h3>About me:</h3>
           <p>I started coding in January 2023 and loved it ever since. I love being challenged and the feeling of solving a problem that I have been stuck on for awhile. I enjoy the design aspect of web development and the joy of personalizing web pages the way I see fit. </p>
           <p>I have always worked in a team and having other individuals to bounce ideas of is an amazing aspect of web development.</p>
           <p>Collaboration in the web development space is a wonderful aspect that is engraved into the culture of tech. Having a support system is a must for me in any endeavor I begin.</p>
+          <p>This is a list of my favorite hobbies in order to get to know me a little better: </p>
+          <!-- ordered list-->
+          <ul>Ceramics, Going to the beach, Horseback Riding, Reading, Shopping, Traveling</ul>
+          <p>Lastly, I think a fun way to get to know someone is from their music taste. </p>
+          <p>Here is a list of my favorite artists (in no particular order)</p>
+          <!--unordered list -->
+          <ol>Drake, Tame Impala, Brent Faiyaz, Burna Boy</ol>
+        <!-- closing articke container-->
         </article>
       </div>
     </main>
     
    
     <footer>
+    <!-- start of footer-->
       <div>
+        <!-- bring you to the link to my info -->
         <article id='linked-in-profile'>
         <h4>LinkedIn Profile</h4>
   
