--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           <p>I started coding in January 2023 and loved it ever since. I love being challenged and the feeling of solving a problem that I have been stuck on for awhile. I enjoy the design aspect of web development and the joy of personalizing web pages the way I see fit. </p>
           <p>I have always worked in a team and having other individuals to bounce ideas of is an amazing aspect of web development.</p>
           <p>Collaboration in the web development space is a wonderful aspect that is engraved into the culture of tech. Having a support system is a must for me in any endeavor I begin.</p>
-          <p>This is a list of my favorite hobbies in order to get to know me a little better: </p>
+          <h3>This is a list of my favorite hobbies in order to get to know me a little better: </h3>
           <!-- ordered list-->
           <ul>Ceramics, Going to the beach, Horseback Riding, Reading, Shopping, Traveling</ul>
           <p>Lastly, I think a fun way to get to know someone is from their music taste. </p>
-          <p>Here is a list of my favorite artists (in no particular order)</p>
+          <h3>Here is a list of my favorite artists (in no particular order)</h3>
           <!--unordered list -->
           <ol>Drake, Tame Impala, Brent Faiyaz, Burna Boy</ol>
         <!-- closing articke container-->
