--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
     <header>
       <h1>Bryanna Thinkful</h1>
-      <a href='#linked-in-profile'>LinkedIn Profile</a>
-      <a href='#github-profile'>Github Profile</a>
-      <a href='#email'>Email</a>
+      <a href='www.linkedin.com/in/bryanna-keith-778193284'>LinkedIn Profile</a>
+      <a href='https://github.com/bryannadru'>Github Profile</a>
+      <a href='bryanna.dkeith@gmail.com'>Email</a>
     </header>
     
     <main>
@@ -58,13 +58,13 @@
     <!-- start of footer-->
       <div>
         <!-- bring you to the link to my info -->
-        <article id='linked-in-profile'>
+        <article id='www.linkedin.com/in/bryanna-keith-778193284'>
         <h4>LinkedIn Profile</h4>
   
-        <article id='github-profile'>
+        <article id='https://github.com/bryannadru'>
         <h4>Github Profile</h4> 
   
-        <article id='email'>
+        <article id='bryanna.dkeith@gmail.com'>
         <h4>Email</h4>
         </article>
       </div>
