--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     
     <header>
       <h1>Bryanna Thinkful</h1>
-      <a href='www.linkedin.com/in/bryanna-keith-778193284'>LinkedIn Profile</a>
-      <a href='https://github.com/bryannadru'>Github Profile</a>
-      <a href='bryanna.dkeith@gmail.com'>Email</a>
+      <p>Software Developer</p>
     </header>
     
     <main>
@@ -57,6 +55,9 @@
     <footer>
     <!-- start of footer-->
       <div>
+      <a href='www.linkedin.com/in/bryanna-keith-778193284'>LinkedIn Profile</a>
+      <a href='https://github.com/bryannadru'>Github Profile</a>
+      <a href='bryanna.dkeith@gmail.com'>Email</a>
         <!-- bring you to the link to my info -->
         <article id='www.linkedin.com/in/bryanna-keith-778193284'>
         <h4>LinkedIn Profile</h4>
