--- a/index.html
+++ b/index.html
@@ -55,18 +55,13 @@
     <footer>
     <!-- start of footer-->
       <div>
-      <a href='www.linkedin.com/in/bryanna-keith-778193284'>LinkedIn Profile</a>
+      <a href='https://www.linkedin.com/in/bryanna-keith-778193284/'>LinkedIn Profile</a>
       <a href='https://github.com/bryannadru'>Github Profile</a>
-      <a href='bryanna.dkeith@gmail.com'>Email</a>
+      <a href='mailto:bryanna.dkeith@gmail.com'>Email</a>
         <!-- bring you to the link to my info -->
         <article id='www.linkedin.com/in/bryanna-keith-778193284'>
-        <h4>LinkedIn Profile</h4>
-  
         <article id='https://github.com/bryannadru'>
-        <h4>Github Profile</h4> 
-  
-        <article id='bryanna.dkeith@gmail.com'>
-        <h4>Email</h4>
+        <article id='mailto:bryanna.dkeith@gmail.com'>
         </article>
       </div>
     </footer>
