--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
     <title>Bryanna Portolio</title>
-    <link href='style.css' rel='stylesheet' type='text/css' />
+    <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
   
   <body>
@@ -59,10 +59,10 @@
       <a href='https://github.com/bryannadru'>Github Profile</a>
       <a href='mailto:bryanna.dkeith@gmail.com'>Email</a>
         <!-- bring you to the link to my info -->
+        <h4>Contact Info:</h4>
         <article id='www.linkedin.com/in/bryanna-keith-778193284'>
         <article id='https://github.com/bryannadru'>
         <article id='mailto:bryanna.dkeith@gmail.com'>
-        </article>
       </div>
     </footer>
   </body>
