--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <main>
       <div>
-        <img src='Downloads/professional-photo.jpg' alt='Profile Photo'>
+        <img src='/Downloads/professional-photo' alt='Profile Photo'>
         <!-- This is my intro that is hosted in my main container -->
         <!-- h2 tag -->
         <h2>Intro</h2> 
