--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <main>
       <div>
-        <img src='./professional-photo.jpg' alt='Profile Photo' width="250px"/>
+        <img src='![professional-photo](https://github.com/bryannadru/portfolio-project-1/assets/141461326/e98c896b-9456-4ffc-9f4c-c2bf0fb7f437)' alt='Profile Photo' width="250px"/>
         <!-- -->
         <!-- This is my intro that is hosted in my main container -->
         <!-- h2 tag -->
