--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <main>
       <div>
-        <img src='./professional-photo.jpg' alt='Profile Photo' width="250px"/>
+        <img src='./professional-photo.jpg' alt='Profile Photo' width="250px" height="250px"/>
         <!-- -->
         <!-- This is my intro that is hosted in my main container -->
         <!-- h2 tag -->
