--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
             <li>Sza</li>
             <li>Beyonce</li>
           </ol>
-        <!-- closing articke container-->
+
+          <h3>Contact Bryanna</h3>
+
+          <p>I'd love to hear from you. Please feel free to contact or reach me at the following:</p>
+
+          <a href='https://www.linkedin.com/in/bryanna-keith-778193284/'>LinkedIn Profile</a>
+          <a href='https://github.com/bryannadru'>Github Profile</a>
+          <a href='mailto:bryanna.dkeith@gmail.com'>Email</a>
+            <!-- bring you to the link to my info -->
+  
+          <article id='www.linkedin.com/in/bryanna-keith-778193284'>
+          <article id='https://github.com/bryannadru'>
+          <article id='mailto:bryanna.dkeith@gmail.com'>
+          <!-- closing articke container-->
         </article>
       </div>
     </main>
@@ -68,14 +81,7 @@
     <footer>
     <!-- start of footer-->
       <div>
-      <a href='https://www.linkedin.com/in/bryanna-keith-778193284/'>LinkedIn Profile</a>
-      <a href='https://github.com/bryannadru'>Github Profile</a>
-      <a href='mailto:bryanna.dkeith@gmail.com'>Email</a>
-        <!-- bring you to the link to my info -->
 
-        <article id='www.linkedin.com/in/bryanna-keith-778193284'>
-        <article id='https://github.com/bryannadru'>
-        <article id='mailto:bryanna.dkeith@gmail.com'>
       </div>
     </footer>
   </body>
