--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <article id='www.linkedin.com/in/bryanna-keith-778193284'>
           <article id='https://github.com/bryannadru'>
           <article id='mailto:bryanna.dkeith@gmail.com'>
+
+          <img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fgisgeography.com%2Flos-angeles-map-california%2F&psig=AOvVaw1yvsIfF2CXEc-vhUn0u25s&ust=1692203385548000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJjNqP-K34ADFQAAAAAdAAAAABAF' alt='Picture of LA'/>
           <!-- closing articke container-->
         </article>
       </div>
