--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <article id='https://github.com/bryannadru'>
           <article id='mailto:bryanna.dkeith@gmail.com'>
 
-          <img src='https://www.google.com/url?sa=i&url=https%3A%2F%2Fgisgeography.com%2Flos-angeles-map-california%2F&psig=AOvVaw1yvsIfF2CXEc-vhUn0u25s&ust=1692203385548000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCJjNqP-K34ADFQAAAAAdAAAAABAF' alt='Picture of LA'/>
+          <img src='./los-angeles-photo.jpg' alt='Picture of LA' width='250px' height='250px' />
           <!-- closing articke container-->
         </article>
       </div>
