--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           <article id='https://github.com/bryannadru'>
           <article id='mailto:bryanna.dkeith@gmail.com'>
 
+          <!-- image of LA -->
+          <!-- relative path to import photo? or link from web? -->
           <img src='./los-angeles-photo.jpg' alt='Picture of LA' width='250px' height='250px' />
           <!-- closing articke container-->
         </article>
@@ -85,7 +87,7 @@
     <footer>
     <!-- start of footer-->
       <div>
-
+        <p>@ Bryanna Thinkful</p>
       </div>
     </footer>
   </body>
